// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatRouteGuardReviewPeerAbsorptionPrompt given: [case1] one lane owes a stance on two concerns when: [t0] the prompt is rendered then: the bytes a driver reads are pinned 1`] = `
"🦉 each concern awaits your absorption

🌕 lets declare
   │
   ├─ review.peer 1/1
   │  ├─ slug = mechanic
   │  └─ undeclared
   │     ├─ blocker.1
   │     └─ nitpick.1
   │
   ├─ why
   │  └─ a budget ends a disagreement when it runs out, not by a verdict on
   │     who is right. a stance is that verdict: you own each concern — fix
   │     it, or hold that it is fine to continue — and it goes on record
   │     where a council can rule on it.
   │
   ├─ what to do — concede, by default
   │  └─ the reviewer is right and you will fix it. that is the ordinary
   │     answer, and the sequence is: concede → fix → budget → re-arrive.
   │
   │     rhx route.stone.set --stone 5.1.execution \\
   │       --as conceded --with <slug> --about <concern> \\
   │       --severity better|urgent
   │
   └─ what to do — dispute, to escalate
      └─ this ONE concern is fine to continue, and you want a human council
         to rule on it at the close. it costs a fulcrum entry you author and
         a human's attention, so reach for it where the concern is severe or
         recurs — never as the default.

         rhx route.stone.set --stone 5.1.execution \\
           --as disputed --with <slug> --about <concern> \\
           --why .fulcrums/inventory.of=fulcrums.case=F00N-<slug>.md

         2 concerns stand undeclared — one command each."
`;

exports[`formatRouteGuardReviewPeerAbsorptionPrompt given: [case2] two lanes owe stances, one unreadable when: [t0] the prompt is rendered then: the bytes a driver reads are pinned 1`] = `
"🦉 each concern awaits your absorption

🌕 lets declare
   │
   ├─ review.peer 1/2
   │  ├─ slug = mechanic
   │  └─ undeclared
   │     └─ blocker.1
   │
   ├─ review.peer 2/2
   │  ├─ slug = ergonomist
   │  ├─ verdict = unreadable (counted as 1 blocker)
   │  └─ undeclared
   │     └─ blocker.1
   │
   ├─ why
   │  └─ a budget ends a disagreement when it runs out, not by a verdict on
   │     who is right. a stance is that verdict: you own each concern — fix
   │     it, or hold that it is fine to continue — and it goes on record
   │     where a council can rule on it.
   │
   ├─ what to do — concede, by default
   │  └─ the reviewer is right and you will fix it. that is the ordinary
   │     answer, and the sequence is: concede → fix → budget → re-arrive.
   │
   │     rhx route.stone.set --stone 5.1.execution \\
   │       --as conceded --with <slug> --about <concern> \\
   │       --severity better|urgent
   │
   └─ what to do — dispute, to escalate
      └─ this ONE concern is fine to continue, and you want a human council
         to rule on it at the close. it costs a fulcrum entry you author and
         a human's attention, so reach for it where the concern is severe or
         recurs — never as the default.

         rhx route.stone.set --stone 5.1.execution \\
           --as disputed --with <slug> --about <concern> \\
           --why .fulcrums/inventory.of=fulcrums.case=F00N-<slug>.md

         2 concerns stand undeclared — one command each."
`;
